Adds missing java fx dependencies